[gd_scene load_steps=3 format=2]

[ext_resource path="res://lobby/host_item.gd" type="Script" id=1]
[ext_resource path="res://assets/game_theme.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -16.0
margin_right = 192.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 1 )
highlight_color = Color( 0.968627, 0.976471, 0.0313726, 1 )
origin_color = Color( 1, 1, 1, 1 )

[node name="SelectBtn" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 5.0
theme = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false

[node name="HostNameLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.5
margin_right = 190.0
margin_bottom = 15.5
text = "kirakuiin"

[node name="IPLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -15.0
margin_bottom = 16.0
text = "192.168.0.1"

[connection signal="toggled" from="SelectBtn" to="." method="_on_select"]
